parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL

Grammar

Rule 0     S' -> program
Rule 1     program -> devices cmds
Rule 2     devices -> device devices
Rule 3     devices -> device
Rule 4     device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES
Rule 5     device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES
Rule 6     cmds -> cmd PONTO cmds
Rule 7     cmds -> cmd PONTO
Rule 8     cmd -> SET ID IGUAL_SIMPLES valor
Rule 9     cmd -> LIGAR ID
Rule 10    cmd -> DESLIGAR ID
Rule 11    cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID
Rule 12    cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
Rule 13    cmd -> SE condicao ENTAO cmd
Rule 14    cmd -> SE condicao ENTAO cmd SENAO cmd
Rule 15    cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list
Rule 16    namedevice_list -> ID VIRGULA namedevice_list
Rule 17    namedevice_list -> ID
Rule 18    condicao -> ID operador valor
Rule 19    condicao -> ID operador valor ELOGICO condicao
Rule 20    operador -> MAIOR
Rule 21    operador -> MENOR
Rule 22    operador -> MAIORIGUAL
Rule 23    operador -> MENORIGUAL
Rule 24    operador -> IGUAL
Rule 25    operador -> DIFERENTE
Rule 26    valor -> NUM
Rule 27    valor -> ID

Terminals, with rules where they appear

ABRE_CHAVES          : 4 5
ABRE_PAREN           : 11 12 15
ALERTA               : 11 12 15
BOOL                 : 
DESLIGAR             : 10
DIFERENTE            : 25
DISPOSITIVO          : 4 5
DOIS_PONTOS          : 4 5 15
ELOGICO              : 19
ENTAO                : 13 14
ENVIAR               : 11 12 15
FECHA_CHAVES         : 4 5
FECHA_PAREN          : 11 12 15
ID                   : 4 4 5 8 9 10 11 12 12 16 17 18 19 27
IGUAL                : 24
IGUAL_SIMPLES        : 8
LIGAR                : 9
MAIOR                : 20
MAIORIGUAL           : 22
MENOR                : 21
MENORIGUAL           : 23
NUM                  : 26
PARA                 : 15
PONTO                : 6 7
SE                   : 13 14
SENAO                : 14
SET                  : 8
STRING               : 11 12 15
TODOS                : 15
VIRGULA              : 4 12 16
error                : 

Nonterminals, with rules where they appear

cmd                  : 6 7 13 14 14
cmds                 : 1 6
condicao             : 13 14 19
device               : 2 3
devices              : 1 2
namedevice_list      : 15 16
operador             : 18 19
program              : 0
valor                : 8 18 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . devices cmds
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES
    (5) device -> . DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES

    DISPOSITIVO     shift and go to state 4

    program                        shift and go to state 1
    devices                        shift and go to state 2
    device                         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> devices . cmds
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . SET ID IGUAL_SIMPLES valor
    (9) cmd -> . LIGAR ID
    (10) cmd -> . DESLIGAR ID
    (11) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (13) cmd -> . SE condicao ENTAO cmd
    (14) cmd -> . SE condicao ENTAO cmd SENAO cmd
    (15) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    SET             shift and go to state 7
    LIGAR           shift and go to state 8
    DESLIGAR        shift and go to state 9
    ENVIAR          shift and go to state 10
    SE              shift and go to state 11

    cmds                           shift and go to state 5
    cmd                            shift and go to state 6

state 3

    (2) devices -> device . devices
    (3) devices -> device .
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES
    (5) device -> . DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES

    SET             reduce using rule 3 (devices -> device .)
    LIGAR           reduce using rule 3 (devices -> device .)
    DESLIGAR        reduce using rule 3 (devices -> device .)
    ENVIAR          reduce using rule 3 (devices -> device .)
    SE              reduce using rule 3 (devices -> device .)
    DISPOSITIVO     shift and go to state 4

    device                         shift and go to state 3
    devices                        shift and go to state 12

state 4

    (4) device -> DISPOSITIVO . DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES
    (5) device -> DISPOSITIVO . DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES

    DOIS_PONTOS     shift and go to state 13


state 5

    (1) program -> devices cmds .

    $end            reduce using rule 1 (program -> devices cmds .)


state 6

    (6) cmds -> cmd . PONTO cmds
    (7) cmds -> cmd . PONTO

    PONTO           shift and go to state 14


state 7

    (8) cmd -> SET . ID IGUAL_SIMPLES valor

    ID              shift and go to state 15


state 8

    (9) cmd -> LIGAR . ID

    ID              shift and go to state 16


state 9

    (10) cmd -> DESLIGAR . ID

    ID              shift and go to state 17


state 10

    (11) cmd -> ENVIAR . ALERTA ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> ENVIAR . ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (15) cmd -> ENVIAR . ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    ALERTA          shift and go to state 18


state 11

    (13) cmd -> SE . condicao ENTAO cmd
    (14) cmd -> SE . condicao ENTAO cmd SENAO cmd
    (18) condicao -> . ID operador valor
    (19) condicao -> . ID operador valor ELOGICO condicao

    ID              shift and go to state 20

    condicao                       shift and go to state 19

state 12

    (2) devices -> device devices .

    SET             reduce using rule 2 (devices -> device devices .)
    LIGAR           reduce using rule 2 (devices -> device devices .)
    DESLIGAR        reduce using rule 2 (devices -> device devices .)
    ENVIAR          reduce using rule 2 (devices -> device devices .)
    SE              reduce using rule 2 (devices -> device devices .)


state 13

    (4) device -> DISPOSITIVO DOIS_PONTOS . ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES
    (5) device -> DISPOSITIVO DOIS_PONTOS . ABRE_CHAVES ID FECHA_CHAVES

    ABRE_CHAVES     shift and go to state 21


state 14

    (6) cmds -> cmd PONTO . cmds
    (7) cmds -> cmd PONTO .
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . SET ID IGUAL_SIMPLES valor
    (9) cmd -> . LIGAR ID
    (10) cmd -> . DESLIGAR ID
    (11) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (13) cmd -> . SE condicao ENTAO cmd
    (14) cmd -> . SE condicao ENTAO cmd SENAO cmd
    (15) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    $end            reduce using rule 7 (cmds -> cmd PONTO .)
    SET             shift and go to state 7
    LIGAR           shift and go to state 8
    DESLIGAR        shift and go to state 9
    ENVIAR          shift and go to state 10
    SE              shift and go to state 11

    cmd                            shift and go to state 6
    cmds                           shift and go to state 22

state 15

    (8) cmd -> SET ID . IGUAL_SIMPLES valor

    IGUAL_SIMPLES   shift and go to state 23


state 16

    (9) cmd -> LIGAR ID .

    PONTO           reduce using rule 9 (cmd -> LIGAR ID .)
    SENAO           reduce using rule 9 (cmd -> LIGAR ID .)


state 17

    (10) cmd -> DESLIGAR ID .

    PONTO           reduce using rule 10 (cmd -> DESLIGAR ID .)
    SENAO           reduce using rule 10 (cmd -> DESLIGAR ID .)


state 18

    (11) cmd -> ENVIAR ALERTA . ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> ENVIAR ALERTA . ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (15) cmd -> ENVIAR ALERTA . ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    ABRE_PAREN      shift and go to state 24


state 19

    (13) cmd -> SE condicao . ENTAO cmd
    (14) cmd -> SE condicao . ENTAO cmd SENAO cmd

    ENTAO           shift and go to state 25


state 20

    (18) condicao -> ID . operador valor
    (19) condicao -> ID . operador valor ELOGICO condicao
    (20) operador -> . MAIOR
    (21) operador -> . MENOR
    (22) operador -> . MAIORIGUAL
    (23) operador -> . MENORIGUAL
    (24) operador -> . IGUAL
    (25) operador -> . DIFERENTE

    MAIOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAIORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30
    IGUAL           shift and go to state 31
    DIFERENTE       shift and go to state 32

    operador                       shift and go to state 26

state 21

    (4) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES . ID VIRGULA ID FECHA_CHAVES
    (5) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES . ID FECHA_CHAVES

    ID              shift and go to state 33


state 22

    (6) cmds -> cmd PONTO cmds .

    $end            reduce using rule 6 (cmds -> cmd PONTO cmds .)


state 23

    (8) cmd -> SET ID IGUAL_SIMPLES . valor
    (26) valor -> . NUM
    (27) valor -> . ID

    NUM             shift and go to state 36
    ID              shift and go to state 34

    valor                          shift and go to state 35

state 24

    (11) cmd -> ENVIAR ALERTA ABRE_PAREN . STRING FECHA_PAREN ID
    (12) cmd -> ENVIAR ALERTA ABRE_PAREN . STRING VIRGULA ID FECHA_PAREN ID
    (15) cmd -> ENVIAR ALERTA ABRE_PAREN . STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    STRING          shift and go to state 37


state 25

    (13) cmd -> SE condicao ENTAO . cmd
    (14) cmd -> SE condicao ENTAO . cmd SENAO cmd
    (8) cmd -> . SET ID IGUAL_SIMPLES valor
    (9) cmd -> . LIGAR ID
    (10) cmd -> . DESLIGAR ID
    (11) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (13) cmd -> . SE condicao ENTAO cmd
    (14) cmd -> . SE condicao ENTAO cmd SENAO cmd
    (15) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    SET             shift and go to state 7
    LIGAR           shift and go to state 8
    DESLIGAR        shift and go to state 9
    ENVIAR          shift and go to state 10
    SE              shift and go to state 11

    cmd                            shift and go to state 38

state 26

    (18) condicao -> ID operador . valor
    (19) condicao -> ID operador . valor ELOGICO condicao
    (26) valor -> . NUM
    (27) valor -> . ID

    NUM             shift and go to state 36
    ID              shift and go to state 34

    valor                          shift and go to state 39

state 27

    (20) operador -> MAIOR .

    NUM             reduce using rule 20 (operador -> MAIOR .)
    ID              reduce using rule 20 (operador -> MAIOR .)


state 28

    (21) operador -> MENOR .

    NUM             reduce using rule 21 (operador -> MENOR .)
    ID              reduce using rule 21 (operador -> MENOR .)


state 29

    (22) operador -> MAIORIGUAL .

    NUM             reduce using rule 22 (operador -> MAIORIGUAL .)
    ID              reduce using rule 22 (operador -> MAIORIGUAL .)


state 30

    (23) operador -> MENORIGUAL .

    NUM             reduce using rule 23 (operador -> MENORIGUAL .)
    ID              reduce using rule 23 (operador -> MENORIGUAL .)


state 31

    (24) operador -> IGUAL .

    NUM             reduce using rule 24 (operador -> IGUAL .)
    ID              reduce using rule 24 (operador -> IGUAL .)


state 32

    (25) operador -> DIFERENTE .

    NUM             reduce using rule 25 (operador -> DIFERENTE .)
    ID              reduce using rule 25 (operador -> DIFERENTE .)


state 33

    (4) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID . VIRGULA ID FECHA_CHAVES
    (5) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID . FECHA_CHAVES

    VIRGULA         shift and go to state 40
    FECHA_CHAVES    shift and go to state 41


state 34

    (27) valor -> ID .

    PONTO           reduce using rule 27 (valor -> ID .)
    SENAO           reduce using rule 27 (valor -> ID .)
    ELOGICO         reduce using rule 27 (valor -> ID .)
    ENTAO           reduce using rule 27 (valor -> ID .)


state 35

    (8) cmd -> SET ID IGUAL_SIMPLES valor .

    PONTO           reduce using rule 8 (cmd -> SET ID IGUAL_SIMPLES valor .)
    SENAO           reduce using rule 8 (cmd -> SET ID IGUAL_SIMPLES valor .)


state 36

    (26) valor -> NUM .

    PONTO           reduce using rule 26 (valor -> NUM .)
    SENAO           reduce using rule 26 (valor -> NUM .)
    ELOGICO         reduce using rule 26 (valor -> NUM .)
    ENTAO           reduce using rule 26 (valor -> NUM .)


state 37

    (11) cmd -> ENVIAR ALERTA ABRE_PAREN STRING . FECHA_PAREN ID
    (12) cmd -> ENVIAR ALERTA ABRE_PAREN STRING . VIRGULA ID FECHA_PAREN ID
    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING . FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    FECHA_PAREN     shift and go to state 42
    VIRGULA         shift and go to state 43


state 38

    (13) cmd -> SE condicao ENTAO cmd .
    (14) cmd -> SE condicao ENTAO cmd . SENAO cmd

  ! shift/reduce conflict for SENAO resolved as shift
    PONTO           reduce using rule 13 (cmd -> SE condicao ENTAO cmd .)
    SENAO           shift and go to state 44

  ! SENAO           [ reduce using rule 13 (cmd -> SE condicao ENTAO cmd .) ]


state 39

    (18) condicao -> ID operador valor .
    (19) condicao -> ID operador valor . ELOGICO condicao

    ENTAO           reduce using rule 18 (condicao -> ID operador valor .)
    ELOGICO         shift and go to state 45


state 40

    (4) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA . ID FECHA_CHAVES

    ID              shift and go to state 46


state 41

    (5) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .

    DISPOSITIVO     reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)
    SET             reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)
    LIGAR           reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)
    DESLIGAR        reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)
    ENVIAR          reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)
    SE              reduce using rule 5 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID FECHA_CHAVES .)


state 42

    (11) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN . ID
    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN . PARA TODOS DOIS_PONTOS namedevice_list

    ID              shift and go to state 47
    PARA            shift and go to state 48


state 43

    (12) cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA . ID FECHA_PAREN ID

    ID              shift and go to state 49


state 44

    (14) cmd -> SE condicao ENTAO cmd SENAO . cmd
    (8) cmd -> . SET ID IGUAL_SIMPLES valor
    (9) cmd -> . LIGAR ID
    (10) cmd -> . DESLIGAR ID
    (11) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID
    (12) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID
    (13) cmd -> . SE condicao ENTAO cmd
    (14) cmd -> . SE condicao ENTAO cmd SENAO cmd
    (15) cmd -> . ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list

    SET             shift and go to state 7
    LIGAR           shift and go to state 8
    DESLIGAR        shift and go to state 9
    ENVIAR          shift and go to state 10
    SE              shift and go to state 11

    cmd                            shift and go to state 50

state 45

    (19) condicao -> ID operador valor ELOGICO . condicao
    (18) condicao -> . ID operador valor
    (19) condicao -> . ID operador valor ELOGICO condicao

    ID              shift and go to state 20

    condicao                       shift and go to state 51

state 46

    (4) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID . FECHA_CHAVES

    FECHA_CHAVES    shift and go to state 52


state 47

    (11) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID .

    PONTO           reduce using rule 11 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID .)
    SENAO           reduce using rule 11 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN ID .)


state 48

    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA . TODOS DOIS_PONTOS namedevice_list

    TODOS           shift and go to state 53


state 49

    (12) cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID . FECHA_PAREN ID

    FECHA_PAREN     shift and go to state 54


state 50

    (14) cmd -> SE condicao ENTAO cmd SENAO cmd .

    PONTO           reduce using rule 14 (cmd -> SE condicao ENTAO cmd SENAO cmd .)
    SENAO           reduce using rule 14 (cmd -> SE condicao ENTAO cmd SENAO cmd .)


state 51

    (19) condicao -> ID operador valor ELOGICO condicao .

    ENTAO           reduce using rule 19 (condicao -> ID operador valor ELOGICO condicao .)


state 52

    (4) device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .

    DISPOSITIVO     reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)
    SET             reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)
    LIGAR           reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)
    DESLIGAR        reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)
    ENVIAR          reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)
    SE              reduce using rule 4 (device -> DISPOSITIVO DOIS_PONTOS ABRE_CHAVES ID VIRGULA ID FECHA_CHAVES .)


state 53

    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS . DOIS_PONTOS namedevice_list

    DOIS_PONTOS     shift and go to state 55


state 54

    (12) cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN . ID

    ID              shift and go to state 56


state 55

    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS . namedevice_list
    (16) namedevice_list -> . ID VIRGULA namedevice_list
    (17) namedevice_list -> . ID

    ID              shift and go to state 58

    namedevice_list                shift and go to state 57

state 56

    (12) cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID .

    PONTO           reduce using rule 12 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID .)
    SENAO           reduce using rule 12 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING VIRGULA ID FECHA_PAREN ID .)


state 57

    (15) cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list .

    PONTO           reduce using rule 15 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list .)
    SENAO           reduce using rule 15 (cmd -> ENVIAR ALERTA ABRE_PAREN STRING FECHA_PAREN PARA TODOS DOIS_PONTOS namedevice_list .)


state 58

    (16) namedevice_list -> ID . VIRGULA namedevice_list
    (17) namedevice_list -> ID .

    VIRGULA         shift and go to state 59
    PONTO           reduce using rule 17 (namedevice_list -> ID .)
    SENAO           reduce using rule 17 (namedevice_list -> ID .)


state 59

    (16) namedevice_list -> ID VIRGULA . namedevice_list
    (16) namedevice_list -> . ID VIRGULA namedevice_list
    (17) namedevice_list -> . ID

    ID              shift and go to state 58

    namedevice_list                shift and go to state 60

state 60

    (16) namedevice_list -> ID VIRGULA namedevice_list .

    PONTO           reduce using rule 16 (namedevice_list -> ID VIRGULA namedevice_list .)
    SENAO           reduce using rule 16 (namedevice_list -> ID VIRGULA namedevice_list .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for SENAO in state 38 resolved as shift
